<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">中投摩根</string>
    <string name="login">登录</string>
    <string name="right">右边</string>
    <string name="home">首页</string>
    <string name="investment">出借</string>
    <string name="account">我的</string>
    <string name="more">发现</string>
    <string name="phone">手机号码：</string>
    <string name="phone_text">请输入手机号</string>
    <string name="next">下一步</string>
    <string name="v_code">验证码：</string>
    <string name="password">设置密码：</string>
    <string name="password_text">请输入密码</string>
    <string name="code_text">请输入手机验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="home_tishi">新人惠（注册即送50元出借红包）</string>
    <string name="home_but">立即出借</string>
    <string name="home_but1">已售罄</string>
    <string name="home_but2">还款中</string>
    <string name="once_investment">立即出借</string>
    <string name="bt_cash">提现</string>
    <string name="bt_recharge">充值</string>

    <!-- 手势密码 -->
    <string name="action_settings">Settings</string>
    <string name="lockscreen_access_pattern_start">"开始绘制图案"</string>
    <string name="lockscreen_access_pattern_cleared">"图案已清除"</string>
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_detected">"图案绘制完成"</string>
    <string name="lockpattern_retry_button_text">"重试"</string>
    <string name="lockpattern_continue_button_text">"继续"</string>
    <string name="lockpattern_confirm_button_text">"确认"</string>
    <string name="lockpattern_recording_intro_header">"为了保证您的资产安全，请设置手势密码。"</string>
    <string name="lockpattern_recording_modify_header">"请绘制解锁图案"</string>
    <string name="lockpattern_settings_help_how_to_record">"如何绘制解锁图案"</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重新绘制"</string>
    <string name="lockpattern_pattern_entered_header">"图案已记录"</string>
    <string name="lockpattern_need_to_confirm">"请再次绘制解锁图案"</string>
    <string name="lockpattern_need_to_unlock_wrong">"与上次输入不一致，请重试"</string>
    <string name="lockpattern_pattern_confirmed_header">"手势密码设置成功"</string>
    <string name="lockpattern_recording_inprogress">"完成后松开手指"</string>
    <string name="gesture_password_guide_text">你可以创建一个解锁图案，这样他人在借用你的手机时，将无法打开应用。</string>
    <string name="gesture_password_guide_creat_btn">创建手势密码</string>
    <string name="gesture_password_guide_no">两次图案绘制不一致，请重新绘制</string>

    <!-- shareSdk分享 -->
    <string name="share">中投摩根-专业的财富管理！</string>
    <!-- shareSdk分享 -->
    <string name="time_next">Next</string>
    <string name="time_prev">Previous</string>

    <string-array name="weeks">
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
        <item>周日</item>
    </string-array>
    <string name="illegal_date">日期不在许可范围内!</string>
    <string name="range_date">日期范围不合法!</string>

</resources>