<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

    <FrameLayout
        android:id="@+id/rl_container"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/ll_bottom">
    </FrameLayout>
    <!-- 底部菜单 -->
    <!-- 底部导航栏 -->

    <RelativeLayout
        android:id="@+id/rl_text_prompt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_bottom">

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="*市场有风险，出借需谨慎"
            android:textColor="#c7c7c7"
            android:textSize="12sp"
            android:visibility="gone"
            />

        <View
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:layout_below="@id/tv_text"
            android:background="@color/new_home_bg"
            android:visibility="gone"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <!-- 首页 -->

            <RelativeLayout
                android:id="@+id/rl_home"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_home_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pic_home_select"/>

                <TextView
                    android:id="@+id/tv_home_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_home_img"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/home"
                    android:textColor="@color/main_bellow_text"
                    android:textSize="11sp"/>
            </RelativeLayout>

            <!-- 出借 -->

            <RelativeLayout
                android:id="@+id/rl_investment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:id="@+id/ll_investment"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_investment_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/pic_investment_noselect"/>

                    <TextView
                        android:id="@+id/tv_investment_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/investment"
                        android:textColor="@color/main_bellow_text_no"
                        android:textSize="11sp"/>
                </LinearLayout>
            </RelativeLayout>
            <!-- 账户 -->

            <LinearLayout
                android:id="@+id/ll_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_account_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pic_find_no_select"/>

                <TextView
                    android:id="@+id/tv_account_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/more"
                    android:textColor="@color/main_bellow_text_no"
                    android:textSize="11sp"/>
            </LinearLayout>

            <!-- 更多 -->

            <LinearLayout
                android:id="@+id/ll_more"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_more_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pic_new_account_no_select"/>

                <TextView
                    android:id="@+id/tv_more_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/account"
                    android:textColor="@color/main_bellow_text_no"
                    android:textSize="11sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>